--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         Он вспомнил, что у нее нет меня, когда делал авокадо тосты и <br>
         посадил меня для нее <br>
         Посажен я был сначала в водичку, а потом в стакан из Протагониста, <br>
-        из которого был накануне выпит чудный фильтр (наверное поэтому <br>
+        из которого был выпит чудный фильтр (наверное поэтому <br>
         я такой красивый. Был бы стаканчик после <br>
         рафа - уверен, такого результата не было бы) <br>
         Этот сайт - мой дневник &#10084;&#65039;
