add pics labels

--- a/index.html
+++ b/index.html
@@ -15,20 +15,28 @@
 </head>
 <body>
 <header class="container">
-    <h1>Привет&#128075; Меня зовут <Назови меня как-то и скажи Вале. Он напишет сюда></h1>
+    <h1>Привет&#128075; Меня зовут
+        <Назови меня как-то и скажи Вале. Он напишет сюда>
+    </h1>
+    <br>
     <p>
         Я подарок одного молодого человека одной молодой даме. <br>
         Он вспомнил, что у нее нет меня, когда делал авокадо тосты и <br>
         посадил меня для нее <br>
+        <br>
         Посажен я был сначала в водичку, а потом в стакан из Протагониста, <br>
-        из которого был выпит чудный фильтр (наверное поэтому <br>
+        из которого был выпит чудный фильтр. Наверное поэтому <br>
         я такой красивый. Был бы стаканчик после <br>
-        рафа - уверен, такого результата не было бы) <br>
+        рафа - уверен, такого результата не было бы. <br>
+        <br>
         Этот сайт - мой дневник &#10084;&#65039;
     </p>
 </header>
 <section class="container pics">
-    <img src="./pics/2021-05-06%2022.29.42.jpg" alt="тут должен быть я, но что-то пошло не так">
+    <div class="pic-container">
+        <img src="./pics/2021-05-06%2022.29.42.jpg" alt="тут должен быть я, но что-то пошло не так">
+        <span>Вот сюда пошло все ненужное от меня</span>
+    </div>
 </section>
 <footer class="container">
     <p>Если досмотрел/-а до сюда, значит ты котик. <br> Мур &#128049;</p>
