--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap" rel="stylesheet">
     <link rel="icon" href="assets/favicon.ico"/>
     <link rel="apple-touch-icon" href="assets/favicon.ico"/>
 </head>
@@ -18,17 +18,18 @@
     <h1>Привет&#128075; Меня зовут
         <Назови меня как-то и скажи Вале. Он напишет сюда>
     </h1>
-    <br>
     <p>
         Я подарок одного молодого человека одной молодой даме. <br>
         Он вспомнил, что у нее нет меня, когда делал авокадо тосты и <br>
         посадил меня для нее <br>
-        <br>
+    </p>
+    <p>
         Посажен я был сначала в водичку, а потом в стакан из Протагониста, <br>
         из которого был выпит чудный фильтр. Наверное поэтому <br>
         я такой красивый. Был бы стаканчик после <br>
         рафа - уверен, такого результата не было бы. <br>
-        <br>
+    </p>
+    <p>
         Этот сайт - мой дневник &#10084;&#65039;
     </p>
 </header>
