--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 </header>
 <section class="container pics">
     <div class="pic-container">
-        <img src="./pics/2021-05-06%2022.29.42.jpg" alt="тут должен быть я, но что-то пошло не так">
-        <span>Вот сюда пошло все ненужное от меня</span>
+        <img src="./pics/2021-08-11%2023.28.05.jpg" alt="тут должен быть я, но что-то пошло не так">
+        <span>Вот постоял какое-то время в водичке</span>
     </div>
 </section>
 <footer class="container">
