--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap" rel="stylesheet">
     <link rel="icon" href="assets/favicon.ico"/>
     <link rel="apple-touch-icon" href="assets/favicon.ico"/>
+
+    <a href='https://emojitool.ru/polar-bear'>🐻‍❄️</a>
 </head>
 <body>
 <header class="container">
-    <h1>Привет&#128075; Меня зовут
-        <Назови меня как-то и скажи Вале. Он напишет сюда>
+    <h1>Привет&#128075; Меня зовут "Белый мишка"&#x1F43B;&#x200D;&#x2744;&#xFE0F;
     </h1>
     <p>
         Я подарок одного молодого человека одной молодой даме. <br>
@@ -35,8 +36,16 @@
 </header>
 <section class="container pics">
     <div class="pic-container">
-        <img src="./pics/2021-08-11%2023.28.05.jpg" alt="тут должен быть я, но что-то пошло не так">
-        <span>Вот постоял какое-то время в водичке</span>
+        <img src="./pics/14.09.2021(2).JPG" alt="тут должен быть я, но что-то пошло не так">
+        <span>14.09.2021</span>
+    </div>
+    <div class="pic-container">
+        <img src="./pics/14.09.2021(1).JPG" alt="тут должен быть я, но что-то пошло не так">
+        <span>14.09.2021</span>
+    </div>
+    <div class="pic-container">
+        <img src="./pics/11.08.2021.jpg" alt="тут должен быть я, но что-то пошло не так">
+        <span>Вот постоял какое-то время в водичке (11.08.2021)</span>
     </div>
 </section>
 <footer class="container">
