--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap" rel="stylesheet">
     <link rel="icon" href="assets/favicon.ico"/>
     <link rel="apple-touch-icon" href="assets/favicon.ico"/>
-
-    <a href='https://emojitool.ru/polar-bear'>🐻‍❄️</a>
 </head>
 <body>
 <header class="container">
-    <h1>Привет&#128075; Меня зовут "Белый мишка"&#x1F43B;&#x200D;&#x2744;&#xFE0F;
+    <h1>Привет&#128075; <br>
+        Меня зовут "Белый мишка"&#x1F43B;&#x200D;&#x2744;&#xFE0F;
     </h1>
     <p>
         Я подарок одного молодого человека одной молодой даме. <br>
